Fixed some grammar errors on pages. Changed the menu for better readability. Created dropdown menu on profiling page. Used php to populate the dropdown menu.

--- a/website/styles/baseStyle.css
+++ b/website/styles/baseStyle.css
@@ -112,7 +112,7 @@ label {
     margin-right: auto;
 }
   
-input {
+input, #patient_list {
     height: 20px;
     flex: 0 0 200px;
     margin-left: auto;
